// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests on ProductImage should display component correctly with default image 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Cafe"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Tests on ProductImage should display component correctly with personalized image 1`] = `
<img
  alt="Cafe"
  className="productImg undefined"
  src="../../src/assets/no-image.jpg"
/>
`;
